Enable debug mode for Google Analytics config

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RWTSB1LS3E');
+  gtag('config', 'G-RWTSB1LS3E',{ 'debug_mode':true });
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
