--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-    <!-- End Google Tag Manager -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explore Karnataka - Discover the Heritage</title>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWTSB1LS3E"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-RWTSB1LS3E',{ 'debug_mode':true });
-    </script>
-
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Landing - ShivNanadi Dairy Farm</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body { font-family: Arial, sans-serif; background:#f2f0e9; margin:0; }
+        header { background:#8b0000; color:white; padding:20px; text-align:center; }
+        .hero { background:url('https://upload.wikimedia.org/wikipedia/commons/3/34/Hampi_virupaksha_temple.jpg'); 
+                background-size:cover; height:300px; color:white; display:flex; align-items:center; justify-content:center; text-shadow:2px 2px 8px black; }
+        .hero h1 { font-size:48px; }
+        .btn { padding:12px 22px; background:#ffcc00; border:none; font-weight:bold; cursor:pointer; }
+        .section { padding:40px; text-align:center; }
+        .places { display:flex; gap:20px; justify-content:center; flex-wrap:wrap; }
+        .card { background:white; width:250px; padding:20px; border-radius:10px; box-shadow:0 0 10px #ccc; }
+        img { width:100%; border-radius:10px; height:150px; object-fit:cover; }
+    </style>
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <header>
-    <h1>ShivNanadi Dairy Farm</h1>
+    <h1>Explore Karnataka</h1>
+    <h3>Heritage • Culture • Nature • History</h3>
 </header>
 
-<main>
-    <h2>Welcome to Fresh Organic Dairy Products</h2>
-    <p>Experience fresh A2 milk, ghee and organic fertilizer.</p>
-    <button onclick="location.href='product.html'" class="btn">View Products</button>
-</main>
+<div class="hero">
+    <h1>Experience the Beauty of Karnataka</h1>
+</div>
 
-<footer>
-    <p>© 2025 ShivNanadi Dairy Farm</p>
-</footer>
+<div class="section">
+    <h2>Top Tourist Attractions</h2>
+    <div class="places">
+        <div class="card">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Hampi_Stone_Chariot.JPG">
+            <h3>Hampi</h3>
+        </div>
+        <div class="card">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Mysore_Palace_Morning.jpg">
+            <h3>Mysore Palace</h3>
+        </div>
+        <div class="card">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Coorg_Scenery.jpg">
+            <h3>Coorg</h3>
+        </div>
+    </div>
+
+    <br>
+    <button class="btn" onclick="location.href='product.html'">View Packages</button>
+</div>
 
 </body>
 </html>
