--- a/product.html
+++ b/product.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Karnataka Packages</title>
 
-<!-- GTM -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Products - ShivNanadi Dairy Farm</title>
-<link rel="stylesheet" href="style.css">
+    <style>
+        body { background:#fff8e7; font-family:Arial; margin:0; }
+        header { background:#005f73; padding:20px; color:white; text-align:center; }
+        .section { padding:30px; text-align:center; }
+        .package-grid { display:flex; gap:20px; justify-content:center; flex-wrap:wrap; }
+        .pack { width:260px; background:white; padding:20px; border-radius:10px; 
+                box-shadow:0 0 10px #aaa; }
+        .price { font-size:20px; color:#b80000; font-weight:bold; }
+        img { width:100%; border-radius:10px; height:150px; object-fit:cover; }
+        .btn { padding:10px 20px; background:#ca6702; color:white; border:none; cursor:pointer; }
+    </style>
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
-<h1>Our Products</h1>
+<header>
+    <h1>Karnataka Travel Packages</h1>
+</header>
 
-<div class="product-list">
-    <div class="product-card">
-        <h3>A2 Cow Milk</h3>
-        <p>Fresh and pure.</p>
-        <button onclick="location.href='payment.html'">Buy Now</button>
+<div class="section">
+    <h2>Choose Your Adventure</h2>
+
+    <div class="package-grid">
+        
+        <div class="pack">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Hampi_virupaksha_temple.jpg">
+            <h3>Hampi Historic Tour</h3>
+            <p class="price">₹4,999</p>
+            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
+        </div>
+
+        <div class="pack">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Mysore_Palace_Morning.jpg">
+            <h3>Mysore Royal Tour</h3>
+            <p class="price">₹5,499</p>
+            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
+        </div>
+
+        <div class="pack">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Coorg_Scenery.jpg">
+            <h3>Coorg Nature Retreat</h3>
+            <p class="price">₹6,299</p>
+            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
+        </div>
+
     </div>
 
-    <div class="product-card">
-        <h3>Organic Ghee</h3>
-        <p>Traditional churned ghee.</p>
-        <button onclick="location.href='payment.html'">Buy Now</button>
-    </div>
-
-    <div class="product-card">
-        <h3>Cow Dung Fertilizer</h3>
-        <p>Natural manure for plants.</p>
-        <button onclick="location.href='payment.html'">Buy Now</button>
-    </div>
+    <br>
+    <button class="btn" onclick="location.href='index.html'">Back to Home</button>
 </div>
-
-<br><br>
-<button onclick="location.href='index.html'" class="btn">Back to Home</button>
 
 </body>
 </html>
