Revise thank you page content and styling
Updated thank you page to enhance user experience.

--- a/thankyou.html
+++ b/thankyou.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thank You!</title>
 
-<!-- GTM -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KHPTRH75');</script>
-
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thank You - ShivNanadi Dairy Farm</title>
-<link rel="stylesheet" href="style.css">
-
+    <style>
+        body { background:#fff4d6; text-align:center; font-family:Arial; }
+        h1 { color:#9a031e; margin-top:100px; }
+        .btn { padding:12px 25px; background:#ff8800; color:white; border:none; cursor:pointer; margin-top:20px; }
+    </style>
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHPTRH75"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
-<h1>Thank You! 🎉</h1>
-<p>Your order has been placed successfully.</p>
+<h1>🎉 Thank You for Booking! 🎉</h1>
+<p>Your Karnataka journey awaits you.</p>
 
-<button onclick="location.href='index.html'" class="btn">Return to Home</button>
+<button class="btn" onclick="location.href='index.html'">Return to Home</button>
 
 </body>
 </html>
