--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Karnataka - Discover the Heritage</title>
-
-    <style>
-        body { font-family: Arial, sans-serif; background:#f2f0e9; margin:0; }
-        header { background:#8b0000; color:white; padding:20px; text-align:center; }
-        .hero { background:url('https://upload.wikimedia.org/wikipedia/commons/3/34/Hampi_virupaksha_temple.jpg'); 
-                background-size:cover; height:300px; color:white; display:flex; align-items:center; justify-content:center; text-shadow:2px 2px 8px black; }
-        .hero h1 { font-size:48px; }
-        .btn { padding:12px 22px; background:#ffcc00; border:none; font-weight:bold; cursor:pointer; }
-        .section { padding:40px; text-align:center; }
-        .places { display:flex; gap:20px; justify-content:center; flex-wrap:wrap; }
-        .card { background:white; width:250px; padding:20px; border-radius:10px; box-shadow:0 0 10px #ccc; }
-        img { width:100%; border-radius:10px; height:150px; object-fit:cover; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Explore Karnataka</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<style>
+body {margin:0;font-family:Arial;background:#fff;}
+header {background:#3b1e54;color:white;padding:20px;text-align:center;}
+nav {display:flex;justify-content:center;gap:20px;margin-top:10px;}
+nav a {color:white;text-decoration:none;font-weight:bold;}
+.hero {
+background:url('https://images.unsplash.com/photo-1584531735489-713270b3d18a?auto=format&fit=crop&w=1200&q=60') center/cover no-repeat;
+height:70vh;display:flex;align-items:center;justify-content:center;color:white;
+text-shadow:2px 2px 10px #000;font-size:2.2rem;font-weight:bold;
+}
+.section {padding:40px;text-align:center;}
+.places img {width:300px;height:200px;border-radius:10px;}
+.grid {display:flex;flex-wrap:wrap;justify-content:center;gap:20px;}
+.btn {padding:12px 20px;background:#3b1e54;color:white;border-radius:5px;text-decoration:none;}
+.btn:hover {background:#532f7d;}
+footer {padding:20px;background:#222;color:white;text-align:center;margin-top:40px;}
+</style>
 </head>
-
 <body>
 
 <header>
-    <h1>Explore Karnataka</h1>
-    <h3>Heritage • Culture • Nature • History</h3>
+<h1 class="animate__animated animate__fadeInDown">EXPLORE KARNATAKA</h1>
+<nav>
+<a href="index.html">Home</a>
+<a href="places.html">Best Places</a>
+<a href="packages.html">Packages</a>
+</nav>
 </header>
 
-<div class="hero">
-    <h1>Experience the Beauty of Karnataka</h1>
+<div class="hero animate__animated animate__zoomIn">
+Discover the Heritage, Culture & Beauty of Karnataka
 </div>
 
-<div class="section">
-    <h2>Top Tourist Attractions</h2>
-    <div class="places">
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Hampi_Stone_Chariot.JPG">
-            <h3>Hampi</h3>
-        </div>
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Mysore_Palace_Morning.jpg">
-            <h3>Mysore Palace</h3>
-        </div>
-        <div class="card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Coorg_Scenery.jpg">
-            <h3>Coorg</h3>
-        </div>
-    </div>
-
-    <br>
-    <button class="btn" onclick="location.href='product.html'">View Packages</button>
+<div class="section places">
+<h2>Top Attractions</h2>
+<div class="grid">
+<div>
+<img src="https://images.unsplash.com/photo-1593697904942-8f24c85ec6ef?auto=format&fit=crop&w=800&q=60">
+<p><strong>Mysore Palace</strong></p>
 </div>
+<div>
+<img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=800&q=60">
+<p><strong>Hampi</strong></p>
+</div>
+<div>
+<img src="https://images.unsplash.com/photo-1626870196939-4b3bdf846dcd?auto=format&fit=crop&w=800&q=60">
+<p><strong>Jog Falls</strong></p>
+</div>
+</div>
+<br>
+<a class="btn" href="places.html">View More Places</a>
+</div>
+
+<footer>© 2025 Explore Karnataka</footer>
 
 </body>
 </html>
