--- a/payment.html
+++ b/payment.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Payment</title>
-
-    <style>
-        body { background:#e8f5e9; font-family:Arial; margin:0; }
-        header { background:#1b4332; color:white; padding:20px; text-align:center; }
-        .form-container { margin:50px auto; width:320px; background:white; padding:25px;
-                          border-radius:10px; box-shadow:0 0 10px #aaa; }
-        input { width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #888; }
-        .btn { background:#2d6a4f; color:white; padding:12px; width:100%; border:none;
-               font-size:16px; cursor:pointer; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Packages - Explore Karnataka</title>
+<style>
+body{margin:0;font-family:Arial;background:#fff8f0;}
+header{background:#3b1e54;color:white;padding:20px;text-align:center;}
+nav{display:flex;justify-content:center;gap:20px;margin-top:10px;}
+nav a{color:white;text-decoration:none;font-weight:bold;}
+.section{padding:40px;text-align:center;}
+.grid{display:flex;flex-wrap:wrap;justify-content:center;gap:20px;}
+.card{background:white;width:300px;padding:15px;border-radius:15px;box-shadow:0 0 10px #ccc;}
+.card img{width:100%;height:180px;object-fit:cover;border-radius:10px;}
+.price{font-size:1.3rem;color:green;font-weight:bold;}
+.btn{background:#3b1e54;color:white;padding:10px 20px;text-decoration:none;border-radius:5px;}
+.btn:hover{background:#532f7d;}
+footer{padding:20px;background:#222;color:white;text-align:center;margin-top:40px;}
+</style>
 </head>
-
 <body>
 
 <header>
-    <h1>Confirm Your Booking</h1>
+<h1>Travel Packages</h1>
+<nav>
+<a href="index.html">Home</a>
+<a href="places.html">Best Places</a>
+<a href="packages.html">Packages</a>
+</nav>
 </header>
 
-<div class="form-container">
-    <h3>Traveler Details</h3>
-
-    <input type="text" placeholder="Full Name" required>
-    <input type="text" placeholder="Email" required>
-    <input type="text" placeholder="Phone Number" required>
-    <input type="text" placeholder="Payment UPI / Card" required>
-
-    <button class="btn" onclick="location.href='thankyou.html'">Pay & Confirm</button>
-
-    <br><br>
-    <button class="btn" style="background:#6a040f" onclick="location.href='product.html'">Back</button>
+<div class="section">
+<h2>Our Best-Selling Karnataka Trips</h2>
 </div>
+
+<div class="grid">
+<div class="card">
+<img src="https://images.unsplash.com/photo-1593697904942-8f24c85ec6ef?auto=format&fit=crop&w=800&q=60">
+<h3>Mysore + Coorg (3 Days)</h3>
+<p class="price">₹8,499</p>
+<a href="thankyou.html" class="btn">Book Now</a>
+</div>
+
+<div class="card">
+<img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=800&q=60">
+<h3>Hampi Heritage Tour (2 Days)</h3>
+<p class="price">₹6,999</p>
+<a href="thankyou.html" class="btn">Book Now</a>
+</div>
+
+<div class="card">
+<img src="https://images.unsplash.com/photo-1626870196939-4b3bdf846dcd?auto=format&fit=crop&w=800&q=60">
+<h3>Jog Falls + Gokarna (4 Days)</h3>
+<p class="price">₹12,999</p>
+<a href="thankyou.html" class="btn">Book Now</a>
+</div>
+</div>
+
+<footer>© 2025 Explore Karnataka</footer>
 
 </body>
 </html>
