--- a/product.html
+++ b/product.html
@@ -1,60 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karnataka Packages</title>
-
-    <style>
-        body { background:#fff8e7; font-family:Arial; margin:0; }
-        header { background:#005f73; padding:20px; color:white; text-align:center; }
-        .section { padding:30px; text-align:center; }
-        .package-grid { display:flex; gap:20px; justify-content:center; flex-wrap:wrap; }
-        .pack { width:260px; background:white; padding:20px; border-radius:10px; 
-                box-shadow:0 0 10px #aaa; }
-        .price { font-size:20px; color:#b80000; font-weight:bold; }
-        img { width:100%; border-radius:10px; height:150px; object-fit:cover; }
-        .btn { padding:10px 20px; background:#ca6702; color:white; border:none; cursor:pointer; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Best Places - Explore Karnataka</title>
+<style>
+body{margin:0;font-family:Arial;background:#f8f8ff;}
+header{background:#3b1e54;color:white;padding:20px;text-align:center;}
+nav{display:flex;justify-content:center;gap:20px;margin-top:10px;}
+nav a{color:white;text-decoration:none;font-weight:bold;}
+.section{padding:40px;text-align:center;}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:20px;}
+.place-card{background:white;padding:15px;border-radius:10px;box-shadow:0 0 10px #ccc;}
+.place-card img{width:100%;height:180px;border-radius:10px;object-fit:cover;}
+.btn{padding:10px 15px;background:#3b1e54;color:white;text-decoration:none;border-radius:5px;}
+.btn:hover{background:#532f7d;}
+footer{padding:20px;background:#222;color:white;text-align:center;margin-top:40px;}
+</style>
 </head>
-
 <body>
 
 <header>
-    <h1>Karnataka Travel Packages</h1>
+<h1>Best Tourist Places in Karnataka</h1>
+<nav>
+<a href="index.html">Home</a>
+<a href="places.html">Best Places</a>
+<a href="packages.html">Packages</a>
+</nav>
 </header>
 
 <div class="section">
-    <h2>Choose Your Adventure</h2>
-
-    <div class="package-grid">
-        
-        <div class="pack">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Hampi_virupaksha_temple.jpg">
-            <h3>Hampi Historic Tour</h3>
-            <p class="price">₹4,999</p>
-            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
-        </div>
-
-        <div class="pack">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Mysore_Palace_Morning.jpg">
-            <h3>Mysore Royal Tour</h3>
-            <p class="price">₹5,499</p>
-            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
-        </div>
-
-        <div class="pack">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Coorg_Scenery.jpg">
-            <h3>Coorg Nature Retreat</h3>
-            <p class="price">₹6,299</p>
-            <button class="btn" onclick="location.href='payment.html'">Book Now</button>
-        </div>
-
-    </div>
-
-    <br>
-    <button class="btn" onclick="location.href='index.html'">Back to Home</button>
+<h2>Explore Heritage, Hills, Waterfalls & Beaches</h2>
 </div>
+
+<div class="grid">
+<div class="place-card">
+<img src="https://images.unsplash.com/photo-1593697904942-8f24c85ec6ef?auto=format&fit=crop&w=800&q=60">
+<h3>Mysore Palace</h3>
+<p>A stunning architectural marvel illuminated with 100k lights.</p>
+</div>
+
+<div class="place-card">
+<img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=800&q=60">
+<h3>Hampi</h3>
+<p>UNESCO World Heritage Site famous for ancient ruins.</p>
+</div>
+
+<div class="place-card">
+<img src="https://images.unsplash.com/photo-1626870196939-4b3bdf846dcd?auto=format&fit=crop&w=800&q=60">
+<h3>Jog Falls</h3>
+<p>India’s second-highest waterfall, breathtaking during monsoon.</p>
+</div>
+
+<div class="place-card">
+<img src="https://images.unsplash.com/photo-1584531735489-713270b3d18a?auto=format&fit=crop&w=800&q=60">
+<h3>Coorg</h3>
+<p>The Scotland of India, famous for coffee estates & green hills.</p>
+</div>
+</div>
+
+<div style="text-align:center;">
+<a href="packages.html" class="btn">See Travel Packages</a>
+</div>
+
+<footer>© 2025 Explore Karnataka</footer>
 
 </body>
 </html>
