--- a/thankyou.html
+++ b/thankyou.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You!</title>
-
-    <style>
-        body { background:#fff4d6; text-align:center; font-family:Arial; }
-        h1 { color:#9a031e; margin-top:100px; }
-        .btn { padding:12px 25px; background:#ff8800; color:white; border:none; cursor:pointer; margin-top:20px; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Thank You</title>
+<style>
+body{margin:0;font-family:Arial;background:#f5fff5;text-align:center;padding:40px;}
+.message{background:white;padding:40px;border-radius:15px;box-shadow:0 0 10px #ccc;display:inline-block;}
+.btn{padding:12px 20px;background:#3b1e54;color:white;text-decoration:none;border-radius:5px;}
+</style>
 </head>
-
 <body>
 
-<h1>🎉 Thank You for Booking! 🎉</h1>
-<p>Your Karnataka journey awaits you.</p>
-
-<button class="btn" onclick="location.href='index.html'">Return to Home</button>
+<div class="message">
+<h1>🎉 Booking Successful!</h1>
+<p>Thank you for choosing Explore Karnataka.</p>
+<p>We will contact you shortly with your trip details.</p>
+<a href="index.html" class="btn">Back to Home</a>
+</div>
 
 </body>
 </html>
