--- a/index.html
+++ b/index.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Explore Karnataka</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<style>
-body {margin:0;font-family:Arial;background:#fff;}
-header {background:#3b1e54;color:white;padding:20px;text-align:center;}
-nav {display:flex;justify-content:center;gap:20px;margin-top:10px;}
-nav a {color:white;text-decoration:none;font-weight:bold;}
-.hero {
-background:url('https://images.unsplash.com/photo-1584531735489-713270b3d18a?auto=format&fit=crop&w=1200&q=60') center/cover no-repeat;
-height:70vh;display:flex;align-items:center;justify-content:center;color:white;
-text-shadow:2px 2px 10px #000;font-size:2.2rem;font-weight:bold;
-}
-.section {padding:40px;text-align:center;}
-.places img {width:300px;height:200px;border-radius:10px;}
-.grid {display:flex;flex-wrap:wrap;justify-content:center;gap:20px;}
-.btn {padding:12px 20px;background:#3b1e54;color:white;border-radius:5px;text-decoration:none;}
-.btn:hover {background:#532f7d;}
-footer {padding:20px;background:#222;color:white;text-align:center;margin-top:40px;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explore Karnataka</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        body { margin:0; font-family: 'Segoe UI', Arial, sans-serif; background: #f4fafc; color: #1a202c; }
+        header { background: linear-gradient(90deg, #2388ff, #34d1bf); padding: 2rem 1rem; text-align: center; }
+        header h1 { font-size: 3rem; color: #fff; margin-bottom: 0.5rem; }
+        header p { font-size: 1.2rem; color: #f4fafc; }
+        .places { display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center; margin: 3rem 0; }
+        .place-card { background: #fff; border-radius: 12px; box-shadow: 0 4px 24px rgba(0,0,0,0.06); width: 320px; padding: 1.2rem; transition: transform 0.2s; }
+        .place-card:hover { transform: scale(1.03); }
+        .place-card img { width: 100%; border-radius: 10px; animation: pulse 2s infinite; }
+        .place-card h3 { margin: 1rem 0 0.5rem 0; color: #2388ff; }
+        .action-btn { 
+            background: linear-gradient(90deg, #2388ff, #34d1bf); 
+            color: #fff; border: none; font-size: 1rem; padding: 0.7rem 2rem;
+            border-radius: 8px; cursor: pointer; margin: 2rem auto 0 auto; display: block;
+            font-weight: bold; transition: background 0.2s;
+        }
+        .action-btn:hover { background: #34d1bf; }
+        @media (max-width: 900px) {.places { flex-direction: column; align-items: center; }}
+        @keyframes pulse { 0% {box-shadow: 0 0 0 0 #34d1bf55;} 50% {box-shadow: 0 0 24px 4px #2388ff33;} 100% {box-shadow: 0 0 0 0 #34d1bf55;} }
+        footer {background:#2388ff; color: #fff; text-align:center; padding:1rem;}
+    </style>
 </head>
 <body>
-
-<header>
-<h1 class="animate__animated animate__fadeInDown">EXPLORE KARNATAKA</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="places.html">Best Places</a>
-<a href="packages.html">Packages</a>
-</nav>
-</header>
-
-<div class="hero animate__animated animate__zoomIn">
-Discover the Heritage, Culture & Beauty of Karnataka
-</div>
-
-<div class="section places">
-<h2>Top Attractions</h2>
-<div class="grid">
-<div>
-<img src="https://images.unsplash.com/photo-1593697904942-8f24c85ec6ef?auto=format&fit=crop&w=800&q=60">
-<p><strong>Mysore Palace</strong></p>
-</div>
-<div>
-<img src="https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?auto=format&fit=crop&w=800&q=60">
-<p><strong>Hampi</strong></p>
-</div>
-<div>
-<img src="https://images.unsplash.com/photo-1626870196939-4b3bdf846dcd?auto=format&fit=crop&w=800&q=60">
-<p><strong>Jog Falls</strong></p>
-</div>
-</div>
-<br>
-<a class="btn" href="places.html">View More Places</a>
-</div>
-
-<footer>© 2025 Explore Karnataka</footer>
-
+    <header class="animate__animated animate__fadeInDown">
+        <h1>Explore Karnataka</h1>
+        <p>Discover Heritage, History & Beauty across Karnataka’s iconic destinations. Your adventure starts here!</p>
+    </header>
+    <section class="places">
+        <div class="place-card animate__animated animate__fadeInUp">
+            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Mysore Palace" />
+            <h3>Mysore</h3>
+            <p>Grand palaces, vibrant Dasara festival, art and architecture. Experience the royal heritage.</p>
+        </div>
+        <div class="place-card animate__animated animate__fadeInUp">
+            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Hampi Ruins" />
+            <h3>Hampi</h3>
+            <p>Majestic boulder-strewn ruins, ancient temples, and stories of the Vijayanagara Empire.</p>
+        </div>
+        <div class="place-card animate__animated animate__fadeInUp">
+            <img src="https://images.unsplash.com/photo-1513185158878-8a2b5f4388d0?auto=format&fit=crop&w=600&q=80" alt="Halebidu Temple" />
+            <h3>Halebidu</h3>
+            <p>Marvel at the sculpted splendor of Hoysala architecture and rich inscriptions.</p>
+        </div>
+        <div class="place-card animate__animated animate__fadeInUp">
+            <img src="https://images.unsplash.com/photo-1555685812-4b943f1b78fa?auto=format&fit=crop&w=600&q=80" alt="Coorg" />
+            <h3>Coorg</h3>
+            <p>Lush coffee plantations, waterfalls, and peaceful hills—a paradise for nature lovers.</p>
+        </div>
+        <div class="place-card animate__animated animate__fadeInUp">
+            <img src="https://images.unsplash.com/photo-1587735018730-ed136311f287?auto=format&fit=crop&w=600&q=80" alt="Badami Caves"/>
+            <h3>Badami</h3>
+            <p>Unravel stories carved in sandstone caves and ancient forts.</p>
+        </div>
+    </section>
+    <button class="action-btn animate__animated animate__bounceIn" onclick="location.href='product.html';">Explore Packages</button>
+    <footer>
+        &copy; 2025 Explore Karnataka | Designed for Travelers
+    </footer>
 </body>
 </html>
