--- a/thankyou.html
+++ b/thankyou.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thank You</title>
-<style>
-body{margin:0;font-family:Arial;background:#f5fff5;text-align:center;padding:40px;}
-.message{background:white;padding:40px;border-radius:15px;box-shadow:0 0 10px #ccc;display:inline-block;}
-.btn{padding:12px 20px;background:#3b1e54;color:white;text-decoration:none;border-radius:5px;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thank You - Explore Karnataka</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        body {background:#fffdfa; margin:0; font-family:'Segoe UI', Arial, sans-serif;}
+        .center-box {max-width:520px; margin:4rem auto; background:#fff; border-radius:16px; box-shadow:0 4px 24px rgba(0,0,0,0.08); padding:3rem; text-align:center;}
+        .center-box img {width:120px; margin-bottom:2rem; animation: tada 2s infinite;}
+        h1 {color:#34d1bf;}
+        p {margin:1.5rem 0; color:#444;}
+        .action-row {display:flex; gap:1.2rem; justify-content:center; margin-top:2rem;}
+        .back-btn, .share-btn {
+            background:linear-gradient(90deg,#2388ff,#34d1bf); color:#fff;
+            border:none; padding:0.7rem 2rem; border-radius:8px; cursor:pointer; font-size:1rem; font-weight:bold;
+        }
+        .back-btn:hover, .share-btn:hover {background:#34d1bf;}
+        @keyframes tada {0%{transform:scale(1);}10%,20%{transform:scale(0.95) rotate(-3deg);}30%,50%,70%,90%{transform:scale(1.05) rotate(3deg);}40%,60%,80%{transform:scale(1.05) rotate(-3deg);}100%{transform:scale(1) rotate(0);}
+        }
+        footer {background:#2388ff; color:#fff; text-align:center; padding:1rem; margin-top:6rem;}
+    </style>
+    <script>
+        function backToHome() {
+            location.href = "index.html";
+        }
+        function sharePage() {
+            if (navigator.share) {
+                navigator.share({
+                    title: 'Explore Karnataka Booking',
+                    text: 'I just booked an amazing Karnataka tour!',
+                    url: location.href
+                });
+            } else {
+                alert('Sharing not supported on this browser.');
+            }
+        }
+    </script>
 </head>
 <body>
-
-<div class="message">
-<h1>🎉 Booking Successful!</h1>
-<p>Thank you for choosing Explore Karnataka.</p>
-<p>We will contact you shortly with your trip details.</p>
-<a href="index.html" class="btn">Back to Home</a>
-</div>
-
+    <div class="center-box animate__animated animate__fadeInDown">
+        <img src="https://cdn-icons-png.flaticon.com/512/3807/3807953.png" alt="Success"/>
+        <h1>Thank You!</h1>
+        <p>Your booking is confirmed.<br>
+        Get ready to Explore Karnataka's heritage and wonders!<br>
+        We’ve sent you an email with your package details.</p>
+        <div class="action-row">
+            <button class="back-btn" onclick="backToHome()">Back to Home</button>
+            <button class="share-btn" onclick="sharePage()">Share</button>
+        </div>
+    </div>
+    <footer>
+        &copy; 2025 Explore Karnataka | Bon Voyage!
+    </footer>
 </body>
 </html>
