--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </header>
     <section class="places">
         <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Mysore Palace" />
+            <img src="https://www.google.com/imgres?q=Karnataka%20tourist%20places%20Hampi%20beluru%20Mysore%20and%20other%20historical%20places%20images&imgurl=https%3A%2F%2Fwww.skysketchindia.com%2Fwp-content%2Fuploads%2F2025%2F08%2FMysore.webp&imgrefurl=https%3A%2F%2Fwww.skysketchindia.com%2Fhistorical-places-in-karnataka%2F&docid=iQkGbMclyjSDdM&tbnid=KjSXjcyxns_uxM&vet=12ahUKEwj__9jfx_6QAxXgd2wGHSXBCEw4ChAzegQIERAA..i&w=591&h=310&hcb=2&ved=2ahUKEwj__9jfx_6QAxXgd2wGHSXBCEw4ChAzegQIERAA" />
             <h3>Mysore</h3>
             <p>Grand palaces, vibrant Dasara festival, art and architecture. Experience the royal heritage.</p>
         </div>
         <div class="place-card animate__animated animate__fadeInUp">
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Hampi Ruins" />
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.indianpanorama.in%2Findia-tour-itinerary%2Fkarnataka-heritage-tour.php&psig=AOvVaw1gOOwlh6_499B_lAq7UMN5&ust=1763653572744000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKiC-4vI_pADFQAAAAAdAAAAABAE" />
             <h3>Hampi</h3>
             <p>Majestic boulder-strewn ruins, ancient temples, and stories of the Vijayanagara Empire.</p>
         </div>
