--- a/product.html
+++ b/product.html
@@ -49,7 +49,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>Transport: AC Coach</li>
                 <li>Starting at: ₹6,500</li>
             </ul>
-            <button class="book-btn" onclick="location.href='payment.html?product=mysore';">Book Now</button>
+            <button class="book-btn" onclick="location.href='https://6920110493ec5cc10c37a4c4--visionary-macaron-3e2e2c.netlify.app/payment.html?product=hampi?product=mysore';">Book Now</button>
         </div>
         <div class="package-card animate__animated animate__fadeInUp">
             <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Hampi Explorer"/>
